--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@ body {
 
 /* Estilo do contêiner e perfil */
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     height: 712px;
     margin: 56px auto 0;
     padding: 0 24px;
